# STM32_RTOS_Template

./: CMakeLists.txt  README.md
drivers/global/: global.h
drivers/gpio/: led_driver.c  led_driver.h
drivers/task_manager/: task_manager.c  task_manager.h
freeRTOS/config/: FreeRTOSConfig.h
freeRTOS/include/: FreeRTOS.h  StackMacros.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  mpu_prototypes.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  stdint.readme  task.h  timers.h
freeRTOS/portable/GCC/ARM_CM3/: port.c  portmacro.h
freeRTOS/portable/MemMang/: heap_1.c  heap_2.c  heap_3.c
freeRTOS/source/: queue.c  timers.c
src/: main.c
